--- a/index.html
+++ b/index.html
@@ -1,37 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevBoard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
-        <nav>
-            <div><img src="assets/logo.png" alt="Logo">Dev<span>Board</span></div>
-            <div>
-                <div></div>
-                <div></div>
+<body class="bg-blue-50 font-poppins">
+    <!-- Header -->
+    <header class="flex justify-between items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-10 mb-5 border-b border-gray-300">
+        <h1 class="flex text-xl font-semibold items-center space-x-2">
+            <img src="assets/logo.png" alt="DevBoard Logo" class="h-8 w-8" />
+            <span class="text-gray-900">Dev<span class="font-bold text-gray-600">Board</span></span>
+        </h1>
+        <div class="flex items-center space-x-4">
+            <div class="bg-blue-50 p-2 rounded-lg flex items-center text-green-600 font-medium space-x-2">
+                <img class="h-5 w-5" src="assets/checkbox.png" alt="Task Completed Icon" />
+                <span>23</span>
             </div>
-        </nav>
+            <button class="p-2 rounded-lg bg-gray-200 hover:bg-gray-300 transition">
+                <img src="assets/theme-btn.png" alt="Toggle Theme" class="h-6 w-6" />
+            </button>
+        </div>
     </header>
-    <main>
-        <section>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div>
-                <div class="task-box"></div>
-                <div class="task-box"></div>
-                <div class="task-box"></div>
-                <div class="task-box"></div>
-                <div class="task-box"></div>
-                <div class="task-box"></div>
-            </div>
-        </section>
-        <aside></aside>
+
+    <!-- Main Content -->
+    <main class="flex justify-between items-stretch gap-5 w-4/5 mx-auto h-full">
+        <div class="bg-white p-5 shadow-lg rounded-lg w-4/5 flex flex-col h-full min-h-[60vh]">
+            <!-- Task Overview -->
+            <section class="flex justify-between items-center mb-5 gap-4">
+                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-1/4">
+                    <div class="p-2 bg-white rounded-lg">
+                        <img class="h-10 w-10" src="assets/checkbox.png" alt="Task Completed Icon" />
+                    </div>
+                    <div>
+                        <h3 class="font-semibold text-gray-900">Task Assigned</h3>
+                        <p class="ml-4 text-xl font-bold text-blue-600">6</p>
+                    </div>
+                </div>
+
+                <div class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white p-4 rounded-lg font-semibold text-left items-center w-2/5">
+                    <a class="flex items-center text-2xl" href="blog.html"><img class="w-20 h-20" src="assets/board.png" alt="">Discover Something New Today!</a>
+                </div>
+
+                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-1/4">📅 Tue Feb 25 2025</div>
+            </section>
+
+            <!-- Task Cards -->
+            <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                <!-- Task Card -->
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/3">Shop Ease</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Fix Mobile Button Issue</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">
+                        Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.
+                    </p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 21 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/3">Soft Pay</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Add Pay Success Modal</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">Ensure smooth transition and modal visibility on successful payment.</p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/3">Meta</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Add New Reaction</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">Implement animated reactions using Lottie for better user engagement.</p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/2">Programming Hero</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Fix Video Loading Issue</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">Optimize buffering and preloading to enhance playback speed.</p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/3">Google LLC</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Integrate AI Search</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">Enhance search accuracy using OpenAI embeddings and vector search.</p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg shadow-md hover:scale-105 transition-transform">
+                    <h4 class="bg-white font-medium p-2 rounded-lg w-1/3">Polygon Tech</h4>
+                    <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Review Ami Probashi Site</h3>
+                    <p class="bg-white p-2 mt-2 rounded-lg">Conduct UI/UX audit and suggest performance improvements.</p>
+                    <div class="flex justify-between items-center">
+                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                          Completed
+                      </button>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <!-- Activity Log -->
+        <aside class="bg-white p-5 shadow-lg rounded-lg w-1/5 flex flex-col h-full min-h-[60vh]">
+            <h3 class="text-lg font-semibold">Activity Log</h3>
+            <button class="bg-red-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-red-700 transition">
+                Clear History
+            </button>
+        </aside>
     </main>
 </body>
 </html>
