--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="flex items-center space-x-4">
             <div class="bg-blue-50 p-2 rounded-lg flex items-center text-green-600 font-medium space-x-2">
                 <img class="h-5 w-5" src="assets/checkbox.png" alt="Task Completed Icon" />
-                <span>23</span>
+                <span id="taskCompletedCount">24</span>
             </div>
-            <button class="p-2 rounded-lg bg-gray-200 hover:bg-gray-300 transition">
+            <button class="p-2 rounded-lg bg-gray-200 hover:bg-gray-300 transition" aria-label="Toggle Theme">
                 <img src="assets/theme-btn.png" alt="Toggle Theme" class="h-6 w-6" />
             </button>
         </div>
@@ -28,22 +28,28 @@
     <main class="flex justify-between items-stretch gap-5 w-4/5 mx-auto h-full">
         <div class="bg-white p-5 shadow-lg rounded-lg w-4/5 flex flex-col h-full min-h-[60vh]">
             <!-- Task Overview -->
-            <section class="flex justify-between items-center mb-5 gap-4">
-                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-1/4">
+            <section class="flex justify-between items-center mb-5 gap-4 flex-wrap">
+                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-full sm:w-1/4">
                     <div class="p-2 bg-white rounded-lg">
                         <img class="h-10 w-10" src="assets/checkbox.png" alt="Task Completed Icon" />
                     </div>
                     <div>
                         <h3 class="font-semibold text-gray-900">Task Assigned</h3>
-                        <p class="ml-4 text-xl font-bold text-blue-600">6</p>
+                        <p class="ml-4 text-xl font-bold text-blue-600" id="taskAssignedCount">6</p>
                     </div>
                 </div>
 
-                <div class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white p-4 rounded-lg font-semibold text-left items-center w-2/5">
-                    <a class="flex items-center text-2xl" href="blog.html"><img class="w-20 h-20" src="assets/board.png" alt="">Discover Something New Today!</a>
+                <div class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white p-4 rounded-lg font-semibold text-left items-center w-full sm:w-2/5 mt-4 sm:mt-0">
+                    <a class="flex items-center text-2xl" href="blog.html">
+                        <img class="w-20 h-20" src="assets/board.png" alt="Discover Something New" />
+                        <span>Discover Something New Today!</span>
+                    </a>
                 </div>
 
-                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-1/4">📅 Tue Feb 25 2025</div>
+                <div class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-full sm:w-1/4 mt-4 sm:mt-0 gap-4">
+                    <img class="h-10 w-10" src="assets/calender.png" alt="Calender">
+                    <span class="text-2xl" id="currentDate"></span>
+                </div>
             </section>
 
             <!-- Task Cards -->
@@ -56,10 +62,10 @@
                         Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.
                     </p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 21 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 02 April 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
 
@@ -68,10 +74,10 @@
                     <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Add Pay Success Modal</h3>
                     <p class="bg-white p-2 mt-2 rounded-lg">Ensure smooth transition and modal visibility on successful payment.</p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
 
@@ -80,10 +86,10 @@
                     <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Add New Reaction</h3>
                     <p class="bg-white p-2 mt-2 rounded-lg">Implement animated reactions using Lottie for better user engagement.</p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 20 March 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
 
@@ -92,10 +98,10 @@
                     <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Fix Video Loading Issue</h3>
                     <p class="bg-white p-2 mt-2 rounded-lg">Optimize buffering and preloading to enhance playback speed.</p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 17 March 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
 
@@ -104,10 +110,10 @@
                     <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Integrate AI Search</h3>
                     <p class="bg-white p-2 mt-2 rounded-lg">Enhance search accuracy using OpenAI embeddings and vector search.</p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 14 March 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
 
@@ -116,10 +122,10 @@
                     <h3 class="text-center font-bold text-lg font-semibold text-gray-900">Review Ami Probashi Site</h3>
                     <p class="bg-white p-2 mt-2 rounded-lg">Conduct UI/UX audit and suggest performance improvements.</p>
                     <div class="flex justify-between items-center">
-                      <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 25 March 2025</p>
-                      <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
-                          Completed
-                      </button>
+                        <p class="text-sm text-gray-500 mt-2">🗓 Deadline: 11 March 2025</p>
+                        <button class="task-button bg-indigo-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-indigo-700 transition">
+                            Completed
+                        </button>
                     </div>
                 </div>
             </section>
@@ -128,10 +134,58 @@
         <!-- Activity Log -->
         <aside class="bg-white p-5 shadow-lg rounded-lg w-1/5 flex flex-col h-full min-h-[60vh]">
             <h3 class="text-lg font-semibold">Activity Log</h3>
+            <div class="mt-4 space-y-3" id="activityLog">
+                <!-- Activity log entries will be added here dynamically -->
+            </div>
             <button class="bg-red-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-red-700 transition">
                 Clear History
             </button>
         </aside>
     </main>
+
+    <!-- Script for Dynamic Date and Task Completion -->
+    <script>
+        // Dynamic Date
+        const dateElement = document.getElementById('currentDate');
+        const currentDate = new Date().toDateString();
+        dateElement.textContent = currentDate;
+
+        // Task Completion Logic
+        const taskButtons = document.querySelectorAll('.task-button');
+        const taskAssignedCount = document.getElementById('taskAssignedCount');
+        const taskCompletedCount = document.getElementById('taskCompletedCount');
+        const activityLog = document.getElementById('activityLog');
+
+        let tasksAssigned = 6; 
+        let taskCompleted = 24;
+
+        taskButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                if (!button.disabled) {
+                    // Disable the button and change its style
+                    button.disabled = true;
+                    button.textContent = 'Completed';
+                    button.classList.remove('bg-indigo-600', 'hover:bg-indigo-700');
+                    button.classList.add('bg-gray-400', 'cursor-not-allowed');
+
+                    // Decrease the task assigned count
+                    tasksAssigned -= 1;
+                    taskCompleted += 1;
+                    taskAssignedCount.textContent = tasksAssigned;
+                    taskCompletedCount.textContent = taskCompleted;
+
+                    // Get the task name (h4 text) and current time
+                    const taskName = button.closest('div').querySelector('h4').textContent;
+                    const currentTime = new Date().toLocaleTimeString();
+
+                    // Add activity log entry
+                    const logEntry = document.createElement('p');
+                    logEntry.className = 'text-sm text-gray-600';
+                    logEntry.textContent = `✅ ${taskName} completed at ${currentTime}.`;
+                    activityLog.prepend(logEntry); // Add to the top of the activity log
+                }
+            });
+        });
+    </script>
 </body>
 </html>
