--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevBoard - Blog</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        code {
+            background-color: azure;
+        }
+    </style>
 </head>
 <body class="bg-blue-50 font-poppins">
     <header class="flex justify-between items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-10 mb-5 border-b border-gray-300">
@@ -19,7 +24,7 @@
         <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-1: What are the different ways to select an element in the DOM?</h3>
             <hr>
-            <p class="text-1xl text-gray-600">You can select elements in the DOM using methods like <code>getElementById()</code>, <code>getElementsByClassName()</code>, <code>getElementsByTagName()</code>, <code>querySelector()</code>, and <code>querySelectorAll()</code>. Each method has different use cases, with <code>querySelector()</code> being the most versatile.</p>
+            <p class="text-1xl text-gray-600">There are few ways to select an element in the DOM. using methods like <code>getElementById()</code>, <code>getElementsByClassName()</code>, <code>getElementsByTagName()</code>, <code>querySelector()</code>, and <code>querySelectorAll()</code>. Each method has different use cases, with <code>querySelector()</code> being the most versatile.</p>
         </div>
         <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent?</h3>
