--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="bg-blue-50 font-poppins">
+        <!-- Header -->
         <header
             class="flex justify-between items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-10 mb-5 border-b border-gray-300"
         >
@@ -42,7 +43,7 @@
             >
                 <section class="flex justify-between items-center mb-5 gap-4 flex-wrap">
                     <div
-                        class="flex items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-full sm:w-1/4"
+                        class="flex justify-between items-center bg-blue-50 p-5 rounded-lg shadow-md border border-gray-200 w-full sm:w-1/4"
                     >
                         <div class="p-2 bg-white rounded-lg">
                             <img
@@ -52,7 +53,7 @@
                             />
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-900">Task Assigned</h3>
+                            <h3 class="font-semibold text-gray-500">Task Assigned</h3>
                             <p
                                 class="ml-4 text-xl font-bold text-blue-600"
                                 id="taskAssignedCount"
@@ -82,6 +83,8 @@
                         <span class="text-2xl" id="currentDate"></span>
                     </div>
                 </section>
+
+                <hr class="dotted mb-5">
 
                 <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                     <div
@@ -242,15 +245,18 @@
             <aside
                 class="bg-white p-5 shadow-lg rounded-lg w-1/5 flex flex-col h-full min-h-[60vh]"
             >
-                <h3 class="text-lg font-semibold">Activity Log</h3>
-                <div class="mt-4 space-y-3" id="activityLog">
+                <div class="flex gap-4 text-center">
+                    <img src="assets/activity.png" alt="Activity">
+                    <h3 class="text-lg font-semibold">Activity Log</h3>
                 </div>
                 <button
-                    class="bg-red-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-red-700 transition"
+                    class="bg-blue-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-red-700 transition"
                     id="clear"
                 >
                     Clear History
                 </button>
+                <div class="mt-4 space-y-3" id="activityLog">
+                </div>
             </aside>
         </main>
         <script src="script.js"></script>
