--- a/blog.html
+++ b/blog.html
@@ -17,34 +17,34 @@
             <img src="assets/logo.png" alt="DevBoard Logo" class="h-8 w-8" />
             <span class="text-gray-900">Dev<span class="font-bold text-gray-600">Board</span></span>
         </h1>
-        <p class="text-xl text-purple-700 font-bold"><a href="index.html">Back to Dashboard</a></p>
+        <p class="text-1xl font-bold"><a class="bg-purple-700 p-2 rounded-lg text-white" href="index.html">Back to Dashboard</a></p>
     </header>
-    <main>
-        <h1 class="text-center text-3xl text-black-600 font-bold">Blogs</h1>
-        <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
+    <main class="w-4/5 mx-auto mt-5">
+        <h1 class="text-center text-3xl text-black-600 font-bold mb-5">Blogs</h1>
+        <div class="bg-white p-5 shadow-lg rounded-lg mb-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-1: What are the different ways to select an element in the DOM?</h3>
-            <hr>
-            <p class="text-1xl text-gray-600">There are few ways to select an element in the DOM. using methods like <code>getElementById()</code>, <code>getElementsByClassName()</code>, <code>getElementsByTagName()</code>, <code>querySelector()</code>, and <code>querySelectorAll()</code>. Each method has different use cases, with <code>querySelector()</code> being the most versatile.</p>
+            <hr class="my-2">
+            <p class="text-gray-600">There are few ways to select an element in the DOM. using methods like <code>getElementById()</code>, <code>getElementsByClassName()</code>, <code>getElementsByTagName()</code>, <code>querySelector()</code>, and <code>querySelectorAll()</code>. Each method has different use cases, with <code>querySelector()</code> being the most versatile.</p>
         </div>
-        <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
+        <div class="bg-white p-5 shadow-lg rounded-lg mb-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent?</h3>
-            <hr>
-            <p class="text-1xl text-gray-600"><code>innerHTML</code> retrieves or sets HTML content inside an element, <code>innerText</code> returns only visible text without HTML, and <code>textContent</code> returns all text, including hidden elements, without formatting.</p>
+            <hr class="my-2">
+            <p class="text-gray-600"><code>innerHTML</code> retrieves or sets HTML content inside an element, <code>innerText</code> returns only visible text without HTML, and <code>textContent</code> returns all text, including hidden elements, without formatting.</p>
         </div>
-        <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
+        <div class="bg-white p-5 shadow-lg rounded-lg mb-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-3: What is event delegation in the DOM?</h3>
-            <hr>
-            <p class="text-1xl text-gray-600">Event delegation is a technique where a parent element listens for events on its child elements by using event bubbling. This is useful for handling events efficiently, especially for dynamically added elements.</p>
+            <hr class="my-2">
+            <p class="text-gray-600">Event delegation is a technique where a parent element listens for events on its child elements by using event bubbling. This is useful for handling events efficiently, especially for dynamically added elements.</p>
         </div>
-        <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
+        <div class="bg-white p-5 shadow-lg rounded-lg mb-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-4: What is event bubbling in the DOM?</h3>
-            <hr>
-            <p class="text-1xl text-gray-600">Event bubbling is a process where an event starts from the target element and propagates upwards to its parent elements. It allows handling events at a higher level in the DOM hierarchy.</p>
+            <hr class="my-2">
+            <p class="text-gray-600">Event bubbling is a process where an event starts from the target element and propagates upwards to its parent elements. It allows handling events at a higher level in the DOM hierarchy.</p>
         </div>
-        <div class="items-center w-4/5 mx-auto bg-white p-5 shadow-lg rounded-lg mt-5 border-gray-300">
+        <div class="bg-white p-5 shadow-lg rounded-lg mb-5 border-gray-300">
             <h3 class="text-2xl text-black-500 font-semibold">Question-5: How do you create, add, and remove elements using JavaScript?</h3>
-            <hr>
-            <p class="text-1xl text-gray-600">You can create an element using <code>document.createElement()</code>, add it using <code>appendChild()</code> or <code>insertBefore()</code>, and remove it using <code>removeChild()</code> or <code>remove()</code>.</p>
+            <hr class="my-2">
+            <p class="text-gray-600">I can create an element using <code>document.createElement()</code>, add it using <code>appendChild()</code> or <code>insertBefore()</code>, and remove it using <code>removeChild()</code> or <code>remove()</code>.</p>
         </div>
     </main>
 </body>
