--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <main class="flex justify-between items-stretch gap-5 w-4/5 mx-auto h-full">
             <div
-                class="bg-white p-5 shadow-lg rounded-lg w-4/5 flex flex-col h-full min-h-[60vh]"
+                class="bg-white p-5 shadow-lg rounded-lg w-4/5 flex flex-col h-full min-h-[70vh]"
             >
                 <section class="flex justify-between items-center mb-5 gap-4 flex-wrap">
                     <div
@@ -242,11 +242,11 @@
             </div>
 
             <aside
-                class="bg-white p-5 shadow-lg rounded-lg w-1/5 flex flex-col h-full min-h-[60vh]"
+                class="bg-white p-5 shadow-lg rounded-lg w-1/5 flex flex-col h-full min-h-[70vh]"
             >
-                <div class="flex gap-4 text-center">
-                    <img src="assets/activity.png" alt="Activity">
-                    <h3 class="text-lg font-semibold">Activity Log</h3>
+                <div class="flex gap-4 text-center items-center">
+                    <img class="h-5 w-5 items-center" src="assets/activity.png" alt="Activity">
+                    <h3 class="text-lg  font-semibold">Activity Log</h3>
                 </div>
                 <button
                     class="bg-blue-600 text-white px-4 py-2 rounded-lg mt-3 hover:bg-red-700 transition"
